--- a/website/index.html
+++ b/website/index.html
@@ -218,29 +218,29 @@
   </section>
 
   <section id="cultura">
+    <div class="overlay"> </div>
       <div class="container text-center">
         <div class="row">
+          <span class="border border-warning"></span>
           <div class="col">
-            <h2 class="section-heading">Cultura</h2>
+            <h2 style="color: #e8703b;" class="section-heading">Cultura</h2>
             <hr class="my-4">
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id. Suspendisse eu tempus nisl, ac feugiat ante. Etiam id imperdiet libero. Quisque eu venenatis felis. Pellentesque non nulla vitae nunc suscipit placerat. Quisque ut dui sit amet ipsum semper sollicitudin euismod nec dolor. Etiam pulvinar lorem et mattis volutpat. Praesent interdum magna est, ac mollis eros euismod sed. Aliquam erat volutpat. Quisque aliquam pulvinar quam, vel vestibulum purus malesuada non. Nunc feugiat lorem in laoreet feugiat.</p>
+            <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id. Suspendisse eu tempus nisl, ac feugiat ante. Etiam id imperdiet libero. Quisque eu venenatis felis. Pellentesque non nulla vitae nunc suscipit placerat. Quisque ut dui sit amet ipsum semper sollicitudin euismod nec dolor. Etiam pulvinar lorem et mattis volutpat. Praesent interdum magna est, ac mollis eros euismod sed. Aliquam erat volutpat. Quisque aliquam pulvinar quam, vel vestibulum purus malesuada non. Nunc feugiat lorem in laoreet feugiat.</p>
           </div>
         </div>
-        <div class="container">
+
           <div class="row">
-            <span class="border border-success"></span>
-            <div class="col">
-              <h4>Talleres</h4>
-              <hr class="my-4">
-              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
+            <span class="border border-warning"></span>
+            <div class="col-12 col-md-6">
+              <h4 style="color: #e8703b;">Talleres</h4>
+              <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
             </div>
             <div class="col">
-              <h4>Agenda Cultural</h4>
-              <hr class="my-4">
-              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
-            </div>
+              <h4 style="color: #e8703b;">Agenda Cultural</h4>
+              <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
           </div>
-      </div>
+        </div>
+
     </section>
 
   <section id="contact">
