--- a/website/index.html
+++ b/website/index.html
@@ -218,6 +218,9 @@
   </section>
 
   <section id="cultura">
+    <script>
+      ScrollReveal().reveal('.cultura');
+    </script>
     <div class="overlay"> </div>
       <div class="container text-center">
         <div class="row">
@@ -245,27 +248,42 @@
 
   <section id="contact">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading">¡Contactanos!</h2>
-          <!-- <hr class="my-4"> -->
-          <!-- <p class="mb-5">¡Si queres venir a comer o preguntar cualquier cosa contactanos por teléfono o e-mail!</p> -->
-          <iframe width="100%" height="745" allowTransparency="true" frameborder="0" scrolling="yes" style="border:1px solid black; overflow: auto;" src="https://www.emailmeform.com/builder/embed/1z96k0Q2K67cZam0dPp67"><a href="https://www.emailmeform.com/builder/embed/1z96k0Q2K67cZam0dPp67">Fill out form.</a></iframe>
-<div style="margin-top:18px;text-align:center"><div id='emf_advertisement'><font face="Verdana" size="2" color="#000000">Powered by</font><span style="position: relative; padding-left: 3px; bottom: -5px;"><img src="//assets.emailmeform.com/images/footer-logo.png?RU1GLTAyLTQxLUhTVFM%3D" /></span><font face="Verdana" size="2" color="#000000">EMF </font><a style="text-decoration:none;" href="https://www.emailmeform.com/" target="_blank"><font face="Verdana" size="2" color="#000000">Online Payment Form</font></a></div></div>
+      <div id="contacto">
+        <div class="row">
+          <div class="col-lg-8 py-4 mx-auto text-center">
+            <h2 class="section-heading">¡Contactanos!</h2>
+          <form action="https://formspree.io/your@email.com" method="POST">
+            <div class="row">
+              <div class="col py-4 mx-auto shadow-sm p-3 mb-5">
+                <input type="text" name="name">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col py-4 mx-auto shadow-sm p-3 mb-5">
+                <input type="email" name="_replyto">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col py-3 mx-auto">
+                <input type="submit" value="Send">
+              </div>
+            </div>
+          </form>
+          </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 ml-auto text-center">
+        <div class="col-lg-3 pt-2 ml-auto text-center">
           <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
           <p>099 123 333</p>
         </div>
-        <div class="col-lg-3 mr-auto text-center">
+        <div class="col-lg-3 pt-2 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
           <p>
             <a href="mailto:espaciolafraterna@gmail.comm">espaciolafraterna@gmail.com</a>
           </p>
         </div>
-        <div class="col-lg-3 mr-auto text-center">
+        <div class="col-lg-3 pt-2 mr-auto text-center">
             <a style="color: #4065b4;" href="https://www.facebook.com/EspacioLaFraterna/" target="_blank">
               <i class="fab fa-facebook fa-3x mb-3 sr-contact-2"></i>
             </a>
@@ -273,7 +291,7 @@
             <a href="https://www.facebook.com/EspacioLaFraterna/" target="_blank">@LaFraterna</a>
           </p>
         </div>
-        <div class="col-lg-3 mr-auto text-center">
+        <div class="col-lg-3 pt-3 mr-auto text-center">
             <a style="color: #262626;" href="https://www.instagram.com/lafraterna_/" target="_blank">
               <i class="fab fa-instagram fa-3x mb-3 sr-contact-2"></i>
             </a>
@@ -296,6 +314,8 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
 
   <script async src="http://static.zotabox.com/6/a/6aca6d4c7d2c70284efc08ceb401c5a1/widgets.js"></script>
 
