--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
   <!-- For IE 9 and below. ICO should be 32x32 pixels in size -->
   <!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
 
-  <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
+  <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. -->
   <link rel="apple-touch-icon-precomposed" href="img/favicon_180.png">
 
   <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 196x196 pixels in size. -->
@@ -25,7 +25,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-  
+
   <!-- Fonts de la Fraterna -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -78,7 +78,7 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-  
+
   <header id="header-fraterna">
     <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
@@ -226,15 +226,32 @@
     </div>
   </section>
 
-  <section id="cultura">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <h2 class="section-heading">Cultura</h2>
-          </div>
+  <section id="cultura" class="pb-5 parallax">
+        <div class="container-fluid text-center position-relative ">
+          <div class="overlayCultura"> </div>
+            <div class="row">
+              <span class="border border-warning"></span>
+              <div class="col">
+                <h2 style="color: #e8703b;" class="section-heading">Cultura</h2>
+                <hr class="my-4">
+                <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id. Suspendisse eu tempus nisl, ac feugiat ante. Etiam id imperdiet libero. Quisque eu venenatis felis. Pellentesque non nulla vitae nunc suscipit placerat. Quisque ut dui sit amet ipsum semper sollicitudin euismod nec dolor. Etiam pulvinar lorem et mattis volutpat. Praesent interdum magna est, ac mollis eros euismod sed. Aliquam erat volutpat. Quisque aliquam pulvinar quam, vel vestibulum purus malesuada non. Nunc feugiat lorem in laoreet feugiat.</p>
+              </div>
+            </div>
+
+              <div class="row pb-5 ">
+                <span class="border border-warning"></span>
+                <div class="col-12 col-md-6">
+                  <h4 style="color: #e8703b;">Talleres</h4>
+                  <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
+                </div>
+                <div class="col">
+                  <h4 style="color: #e8703b;">Agenda Cultural</h4>
+                  <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
+              </div>
+            </div>
         </div>
-      </div>
-    </section>
+
+      </section>
 
   <section id="contact" class="pb-5 parallax position-relative">
     <div class="overlay"></div>
@@ -290,7 +307,7 @@
               <a href="mailto:espaciolafraterna@gmail.comm">espaciolafraterna@gmail.com</a>
             </div>
           </div>
-          
+
         </div>
         <div class="col">
           <div class="container">
