Scroll review is added to cultura section

--- a/website/index.html
+++ b/website/index.html
@@ -232,21 +232,27 @@
             <div class="row">
               <span class="border border-warning"></span>
               <div class="col">
-                <h2 style="color: #e8703b;" class="section-heading">Cultura</h2>
+                <h2>Cultura</h2>
                 <hr class="my-4">
-                <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id. Suspendisse eu tempus nisl, ac feugiat ante. Etiam id imperdiet libero. Quisque eu venenatis felis. Pellentesque non nulla vitae nunc suscipit placerat. Quisque ut dui sit amet ipsum semper sollicitudin euismod nec dolor. Etiam pulvinar lorem et mattis volutpat. Praesent interdum magna est, ac mollis eros euismod sed. Aliquam erat volutpat. Quisque aliquam pulvinar quam, vel vestibulum purus malesuada non. Nunc feugiat lorem in laoreet feugiat.</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id. Suspendisse eu tempus nisl, ac feugiat ante. Etiam id imperdiet libero. Quisque eu venenatis felis. Pellentesque non nulla vitae nunc suscipit placerat. Quisque ut dui sit amet ipsum semper sollicitudin euismod nec dolor. Etiam pulvinar lorem et mattis volutpat. Praesent interdum magna est, ac mollis eros euismod sed. Aliquam erat volutpat. Quisque aliquam pulvinar quam, vel vestibulum purus malesuada non. Nunc feugiat lorem in laoreet feugiat.</p>
               </div>
             </div>
 
-              <div class="row pb-5 ">
+              <div class="row pb-6 ">
                 <span class="border border-warning"></span>
                 <div class="col-12 col-md-6">
-                  <h4 style="color: #e8703b;">Talleres</h4>
-                  <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
+                  <h4>Talleres</h4>
+                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
+                  <div class="mx-auto">
+                    <img class="rounded-circle headline" src="./img/escuela.jpg">
+                  </div>
                 </div>
                 <div class="col">
-                  <h4 style="color: #e8703b;">Agenda Cultural</h4>
-                  <p style="color: white;" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
+                  <h4>Agenda Cultural</h4>
+                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
+                  <div class="mx-auto">
+                    <img class="rounded-circle headline2" src="./img/parallax_contact.jpg">
+                  </div>
               </div>
             </div>
         </div>
