Cultura section is finished

--- a/website/index.html
+++ b/website/index.html
@@ -164,7 +164,7 @@
           </a>
         </div>
       </div>
-      <div class="row">
+      <div class="row no-gutters">
         <div class="col mt-4">
           <hr class="my-4">
         </div>
@@ -227,14 +227,15 @@
   </section>
 
   <section id="cultura" class="pb-5 parallax">
-        <div class="container-fluid text-center position-relative ">
-          <div class="overlayCultura"> </div>
+        <div class="text-center position-relative ">
+          <div class="container">
             <div class="row">
               <span class="border border-warning"></span>
               <div class="col">
                 <h2>Cultura</h2>
                 <hr class="my-4">
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id. Suspendisse eu tempus nisl, ac feugiat ante. Etiam id imperdiet libero. Quisque eu venenatis felis. Pellentesque non nulla vitae nunc suscipit placerat. Quisque ut dui sit amet ipsum semper sollicitudin euismod nec dolor. Etiam pulvinar lorem et mattis volutpat. Praesent interdum magna est, ac mollis eros euismod sed. Aliquam erat volutpat. Quisque aliquam pulvinar quam, vel vestibulum purus malesuada non. Nunc feugiat lorem in laoreet feugiat.</p>
+                <p class="description">A los Fraternxs nos importa mucho la cultura. Es por eso que hacemos un fuerte incapié en que haya propuestas culturales en nuestro espacio. Nos enfocamos básicamente en dos propuestas bien buenas. La primera hace foco en brindar un espacio para talleres y la segunda es enfocada en Espectáculos para poder enriquecer la estadía cuando se vine a degustar un rico plato en el Restaurant.
+                </p>
               </div>
             </div>
 
@@ -242,19 +243,32 @@
                 <span class="border border-warning"></span>
                 <div class="col-12 col-md-6">
                   <h4>Talleres</h4>
-                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
-                  <div class="mx-auto">
-                    <img class="rounded-circle headline" src="./img/escuela.jpg">
+                  <div class="col-lg-8 col-md-6 mx-auto">
+                    <img class="rounded-circle headline" src="./img/talleres.png">
                   </div>
+                  <p class="description">Tenemos muchos y muy diversos talleres. Nos encantaría que participes de alguno de ellos. Te dejamos la lista actualizada de talleres para el 2018.
+                  </p>
+                  <ul class="mx-auto">
+                    <li>Yoga</li>
+                    <li>Yoga Suave</li>
+                    <li>Alexander</li>
+                    <li>Biodanza</li>
+                    <li>Coro</li>
+                    <li>Salsa</li>
+                    <li>Chikun</li>
+                    <li>Danza contemporánea</li>
+                    <li>Candombe</li>
+                  </ul>
                 </div>
                 <div class="col">
-                  <h4>Agenda Cultural</h4>
-                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan tempus vehicula. Nulla aliquam felis lacus, id viverra dui posuere id.</p>
-                  <div class="mx-auto">
-                    <img class="rounded-circle headline2" src="./img/parallax_contact.jpg">
+                  <h4>Espectaculos</h4>
+                  <p class="description pt-5">Los espectáculos son algo muy lindo que tenemos en La Fraterna es por eso que le ponemos mucho amor y cariño en tener siempre un espectáculo que lxs acompañe cuando están degustando la comida rica del Restaurant. Han pasado diversos artistas por nuestro espacio. Porque nos gusta estar involucradxs en la la zona que haibtamos es por eso que hacemos hincapié en los artistas locales sin dejar de darle el espacio a cualquiera que se quiera acercar a interpretar si espectáculo. </p>
+                  <div class="col-lg-8 col-md-6 pt-4 mx-auto">
+                    <img class="rounded-circle headline2" src="./img/mate.png">
                   </div>
               </div>
             </div>
+          </div>
         </div>
 
       </section>
