--- a/website/index.html
+++ b/website/index.html
@@ -226,11 +226,10 @@
     </div>
   </section>
 
-  <section id="cultura" class="pb-5 parallax">
+  <section id="cultura" class="pb-5 parallax ">
         <div class="text-center position-relative ">
           <div class="container">
             <div class="row">
-              <span class="border border-warning"></span>
               <div class="col">
                 <h2>Cultura</h2>
                 <hr class="my-4">
@@ -240,30 +239,31 @@
             </div>
 
               <div class="row pb-6 ">
-                <span class="border border-warning"></span>
                 <div class="col-12 col-md-6">
                   <h4>Talleres</h4>
-                  <div class="col-lg-8 col-md-6 mx-auto">
+                  <div class="col-lg-8 col-md-6 col-sm-8 mx-auto">
                     <img class="rounded-circle headline" src="./img/talleres.png">
                   </div>
                   <p class="description">Tenemos muchos y muy diversos talleres. Nos encantaría que participes de alguno de ellos. Te dejamos la lista actualizada de talleres para el 2018.
                   </p>
-                  <ul class="mx-auto">
-                    <li>Yoga</li>
-                    <li>Yoga Suave</li>
-                    <li>Alexander</li>
-                    <li>Biodanza</li>
-                    <li>Coro</li>
-                    <li>Salsa</li>
-                    <li>Chikun</li>
-                    <li>Danza contemporánea</li>
-                    <li>Candombe</li>
-                  </ul>
+                  <div class=" mx-auto">
+                    <ul class="mx-auto list-unstyled">
+                      <li>Yoga</li>
+                      <li>Yoga Suave</li>
+                      <li>Alexander</li>
+                      <li>Biodanza</li>
+                      <li>Coro</li>
+                      <li>Salsa</li>
+                      <li>Chikun</li>
+                      <li>Danza contemporánea</li>
+                      <li>Candombe</li>
+                    </ul>
+                  </div>
                 </div>
                 <div class="col">
                   <h4>Espectaculos</h4>
                   <p class="description pt-5">Los espectáculos son algo muy lindo que tenemos en La Fraterna es por eso que le ponemos mucho amor y cariño en tener siempre un espectáculo que lxs acompañe cuando están degustando la comida rica del Restaurant. Han pasado diversos artistas por nuestro espacio. Porque nos gusta estar involucradxs en la la zona que haibtamos es por eso que hacemos hincapié en los artistas locales sin dejar de darle el espacio a cualquiera que se quiera acercar a interpretar si espectáculo. </p>
-                  <div class="col-lg-8 col-md-6 pt-4 mx-auto">
+                  <div class="col-lg-8 col-md-6 col-sm-8 pt-4 mx-auto">
                     <img class="rounded-circle headline2" src="./img/mate.png">
                   </div>
               </div>
